Fix some alignment issues with ie6
Some combination of the article tag and div.inner was causing content inside and outside of the article tag to render very far to the left in ie6.
Also switched section tag for main in line with other views on frontend.

--- a/app/assets/stylesheets/views/travel-advice.scss
+++ b/app/assets/stylesheets/views/travel-advice.scss
@@ -3,14 +3,14 @@
 
 .travel-container {
   background-color: #fff;
-  padding-right: 2em;
+  padding: 0 1em 0 1em;
   
   @include media(mobile) {
-	padding-right: 0em;
+    padding: 0em;
   }
 
   @include media(desktop) {
-	padding-right: 2em;
+    padding: 0 1em;
   }
 
   .list {
